Change Log

All notable changes to this project will be documented in this file.

[1.0.1] - 21/11/2023
Added
    trip-service MAJOR Init main.go
    trip-models PATCH Add Trip and Reservation structure models
    user-models PATCH Add Passenger and CarOwner structure models
    user-handlers PATCH Add handlers to respond HTTP requesst, interacting with the database

    - Import database in main to call 'InitializeDatabase' func
    
Changed

Fixed
    user-service & trip-service PATCH Add 'go work init' to FIX 'gopls' error message

[1.0.0] - 10/11/2023
Added
    user-service MAJOR Init main.go

Changed

Fixed






Sample:
Here we would have the update steps for 1.2.4 for people to follow.
Added

Changed
    PROJECTNAME-ZZZZ PATCH Drupal.org is now used for composer.

Fixed
    PROJECTNAME-TTTT PATCH Add logic to runsheet teaser delete to delete corresponding schedule cards.

MINOR
PATCH
MAJOR